# fastapi-project

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  main.py  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 68fd59344997_.py
app/: __init__.py  config.py  main.py
app/database/: __init__.py  models.py  session.py
app/dependencies/: auth.py
app/routers/: __init__.py  auth.py  users.py
app/schemas/: auth.py  user.py
app/schemas/exceptions/: __init__.py  http_exceptions.py
app/services/: user_service.py
app/utils/: email.py  email_send.py  security.py
tests/: conftest.py
tests/test_routers/: test_auth.py  test_users.py
tests/test_services/: test_user_service.py
